# trackio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  RELEASE.md  SECURITY.md  SKILL.md  build_pypi.sh  debug_move_run.py  demo.py  example_infinity_logging.py  hatch_build.py  package.json  pnpm-workspace.yaml  pyproject.toml  repro_bucket_sqlite.py
.changeset/: afraid-baths-change.md  afraid-beds-warn.md  all-drinks-admire.md  angry-onions-take.md  artifact-download-location.md  beige-lights-wash.md  better-towns-dance.md  big-bags-dream.md  big-feet-shake.md  big-ghosts-refuse.md  bitter-masks-fail.md  bitter-wolves-refuse.md  brave-suns-think.md  bright-books-rest.md  bright-books-scroll.md  bright-otters-attack.md  brown-cups-return.md  busy-nails-relate.md  calm-plums-scroll.md  calm-suits-end.md  changeset.cjs  chatty-olives-say.md  clean-deer-bake.md  clean-metrics-logs.md  clear-clocks-pull.md  common-humans-fix.md  crazy-bikes-switch.md  cyan-forks-hang.md  dark-poets-beam.md  deep-results-spend.md  dirty-birds-slide.md  dirty-plants-end.md  dry-bananas-burn.md  eager-meals-call.md  easy-apes-hammer.md  eight-apes-open.md  eight-keys-help.md  eight-otters-compare.md  eleven-roses-wear.md  every-pillows-sin.md  (+125 more)
.github/: pull_request_template.md
autonomous-experiments/: README.md
contrib/trackio-rs/: Cargo.toml  README.md
contrib/trackio-rs/examples/: quickstart.rs
contrib/trackio-rs/src/: batcher.rs
trackio-rs/: .gitignore  Cargo.toml
trackio-rs/examples/: quickstart.rs
trackio-rs/src/: client.rs
(+451 files in other folders)
