[package]
name = "trackio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimal client-only Trackio SDK (Rust)"
repository = "https://github.com/gradio-app/trackio"

[dependencies]
once_cell = "1.19"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"